# flashcards

./: .gitignore  README.md  package.json
app/: package-lock.json  package.json  playwright.config.ts
app/src/: App.vue  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  db.rs  lib.rs
app/src/components/: CardHistoryBars.vue  CdfPlot.vue  ComboDisplay.vue  DbChooser.vue  MiniGrid.vue  PlayTab.vue  RightPanel.vue  SessionSummary.vue  SparklineBar.vue  StatsTab.vue  TierFlash.vue  TimesTableGrid.vue  UserSelector.vue
app/src/composables/: useAudio.ts
app/src/stores/: gameStore.ts  sessionStore.ts
app/src/types/: answerEvent.ts  question.ts  userProfile.ts
app/src/utils/: ipc.ts  scoring.ts  selector.ts  timeWindow.ts
app/tests/e2e/: gameplay.spec.ts  stats.spec.ts
learn_elvish/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
learn_elvish/src/: App.vue  style.css
learn_elvish/src-tauri/: Cargo.toml  tauri.conf.json
learn_elvish/src-tauri/src/: main.rs
learn_elvish/src/components/: ElvishKeyboard.vue  IntroScreen.vue  LevelMenu.vue  QuestionCard.vue  SceneBackground.vue  Summary.vue
learn_elvish/src/components/scenes/: SceneErynLasgalen.vue  SceneHostOfTheWest.vue  SceneImladris.vue  SceneLothlorien.vue
learn_elvish/src/data/: engine.ts  levels.json
learn_elvish/src/types/: level.ts
spec/times-table-flashcards/: spec.md
